Agenda cleanup. Removed a service that was being used in a view. Modified code so that AgendaGetCtrl no longer uses search, instead pulling from the database directly.